force-app/main/default/objects/User/fields/Calendly_15__c.field-meta.xml
<CustomField>
    <fullName>Calendly_15__c</fullName>
    <description>Owners link for a 15 minute Calendly appointment.</description>
    <inlineHelpText>Owners link for a 15 minute Calendly appointment.</inlineHelpText>
    <label>Calendly 15</label>
    <type>Url</type>
</CustomField>