force-app/main/default/objects/User/fields/Calendly_30__c.field-meta.xml
<CustomField>
    <fullName>Calendly_30__c</fullName>
    <description>30 minute Calendly appointment link</description>
    <inlineHelpText>30 minute Calendly appointment link</inlineHelpText>
    <label>Calendly 30</label>
    <type>Url</type>
</CustomField>