force-app/main/default/objects/User/fields/Calendly_Census_Call__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Census_Call__c</fullName>
    <description>Adding census and answering misc questions during Implementation</description>
    <inlineHelpText>Adding census and answering misc questions during Implementation</inlineHelpText>
    <label>Calendly Census Call</label>
    <type>Url</type>
</CustomField>