force-app/main/default/objects/User/fields/Calendly_Census_Review__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Census_Review__c</fullName>
    <description>Link to calendly to schedule census review call for Implementations</description>
    <inlineHelpText>Link to calendly to schedule census review call for Implementations</inlineHelpText>
    <label>Calendly Census Review</label>
    <type>Url</type>
</CustomField>