force-app/main/default/objects/User/fields/Calendly_Document_Review__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Document_Review__c</fullName>
    <description>Link to calendly to schedule plan document review call for Implementations</description>
    <inlineHelpText>Link to calendly to schedule plan document review call for Implementations</inlineHelpText>
    <label>Calendly Document Review</label>
    <type>Url</type>
</CustomField>