force-app/main/default/objects/User/fields/Calendly_Final_Review_and_Funding_Call__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Final_Review_and_Funding_Call__c</fullName>
    <description>First payroll, and handoff to CST (verbally)</description>
    <inlineHelpText>First payroll, and handoff to CST (verbally)</inlineHelpText>
    <label>Calendly Final Review and Funding Call</label>
    <type>Url</type>
</CustomField>