force-app/main/default/objects/User/fields/Calendly_Intro_Plan_Design__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Intro_Plan_Design__c</fullName>
    <description>Link to calendly to schedule intro/plan design call for Implementations</description>
    <inlineHelpText>Link to calendly to schedule intro/plan design call for Implementations</inlineHelpText>
    <label>Calendly Intro/Plan Design</label>
    <type>Url</type>
</CustomField>