force-app/main/default/objects/User/fields/Calendly_Introductory_Call__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Introductory_Call__c</fullName>
    <description>Introductory call w the new client to review the plan, tour the site, and review outstanding items.</description>
    <inlineHelpText>Introductory call w the new client to review the plan, tour the site, and review outstanding items.</inlineHelpText>
    <label>Calendly Introductory Call</label>
    <type>Url</type>
</CustomField>