force-app/main/default/objects/User/fields/Calendly_Payroll_Upload__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Payroll_Upload__c</fullName>
    <description>Link to calendly to schedule Payroll Upload review call for Implementations</description>
    <inlineHelpText>Link to calendly to schedule Payroll Upload review call for Implementations</inlineHelpText>
    <label>Calendly Payroll Upload</label>
    <type>Url</type>
</CustomField>