force-app/main/default/objects/User/fields/Calendly_Training_Call__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Training_Call__c</fullName>
    <label>Calendly Training Call</label>
    <type>Url</type>
</CustomField>