force-app/main/default/objects/User/fields/Can_Close_Other_Cases__c.field-meta.xml
<CustomField>
    <fullName>Can_Close_Other_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Close Other Cases</label>
    <type>Checkbox</type>
</CustomField>