force-app/main/default/objects/User/fields/Client_Facing_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Facing_Email__c</fullName>
    <description>Email that gets shared in client communications</description>
    <inlineHelpText>Email that gets shared in client communications</inlineHelpText>
    <label>Client Facing Email</label>
    <type>Email</type>
</CustomField>