force-app/main/default/objects/User/fields/compliance_approval__c.field-meta.xml
<CustomField>
    <fullName>compliance_approval__c</fullName>
    <label>Compliance Approval</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>