force-app/main/default/objects/User/fields/Current_Active_Implementations__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Implementations__c</fullName>
    <label>Current Active Implementations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>