force-app/main/default/objects/User/fields/Enroll_Your_Employees__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Your_Employees__c</fullName>
    <description>Calendly Link for 401(k) Plan Setup Enroll Your Employees Call</description>
    <inlineHelpText>Calendly Link for 401(k) Plan Setup Enroll Your Employees Call</inlineHelpText>
    <label>Enroll Your Employees</label>
    <type>Url</type>
</CustomField>