force-app/main/default/objects/User/fields/Final_Review_and_Funding__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_and_Funding__c</fullName>
    <description>Calendly link for 401k Plan Setup Final Call</description>
    <inlineHelpText>Calendly link for 401k Plan Setup Final Call</inlineHelpText>
    <label>Final Review and Funding</label>
    <type>Url</type>
</CustomField>