force-app/main/default/objects/User/fields/Five9__Five9Agent_Login_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9Agent_Login_TimeStamp__c</fullName>
    <label>Five9Agent Login TimeStamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>