force-app/main/default/objects/User/fields/Five9__Five9AgentId__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9AgentId__c</fullName>
    <label>Five9 Agent Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>