force-app/main/default/objects/User/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF( ISBLANK(FirstName),  LastName ,
IF(ISBLANK(LastName), FirstName,
FirstName + &quot; &quot; + LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>