force-app/main/default/objects/User/fields/Introductory_Call__c.field-meta.xml
<CustomField>
    <fullName>Introductory_Call__c</fullName>
    <description>Calendly Link for 401(k) Plan Setup Introductory Call</description>
    <inlineHelpText>Calendly Link for 401(k) Plan Setup Introductory Call</inlineHelpText>
    <label>Introductory Call</label>
    <type>Url</type>
</CustomField>