force-app/main/default/objects/User/fields/License_Team__c.field-meta.xml
<CustomField>
    <fullName>License_Team__c</fullName>
    <description>Picklist field to use for grouping on &quot;User Cost Report&quot;</description>
    <inlineHelpText>Picklist field to use for grouping on &quot;User Cost Report&quot;</inlineHelpText>
    <label>License Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>API User</fullName>
            </value>
            <value>
                <fullName>Business Growth</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Client Onboarding</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
                <isActive>false</isActive>
                <label>COO</label>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Internal Auditor</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
                <label>Learning + Development</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Operations VP</fullName>
            </value>
            <value>
                <fullName>People &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Innovation</fullName>
                <isActive>false</isActive>
                <label>Product Innovation</label>
            </value>
            <value>
                <fullName>Saver Success</fullName>
                <isActive>false</isActive>
                <label>Saver Success</label>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
                <isActive>false</isActive>
                <label>Single(k)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>