force-app/main/default/objects/User/fields/Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_ID__c</fullName>
    <formula>ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile ID</label>
    <type>Text</type>
</CustomField>