force-app/main/default/objects/User/fields/Shared_User__c.field-meta.xml
<CustomField>
    <fullName>Shared_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a username is shared between multiple people</description>
    <inlineHelpText>User is shared</inlineHelpText>
    <label>Shared User</label>
    <type>Checkbox</type>
</CustomField>