force-app/main/default/objects/User/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <description>Used for individual email signatures.</description>
    <inlineHelpText>Used for individual email signatures.</inlineHelpText>
    <label>Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>