force-app/main/default/objects/User/fields/simplesurvey__Survey_Last_Requested_On__c.field-meta.xml
<CustomField>
    <fullName>simplesurvey__Survey_Last_Requested_On__c</fullName>
    <label>Survey Last Requested On</label>
    <type>DateTime</type>
</CustomField>