force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Used for reporting and flow builds.</description>
    <inlineHelpText>Used for reporting and flow builds.</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisor Onboarding</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Client Onboarding</fullName>
            </value>
            <value>
                <fullName>Client Support</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Consumer Solutions</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>East Coast Servicing</fullName>
                <isActive>false</isActive>
                <label>East Coast Servicing</label>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
                <label>Learning + Development</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mountain/Central Servicing</fullName>
                <isActive>false</isActive>
                <label>Mountain/Central Servicing</label>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Payroll Koncierge</fullName>
            </value>
            <value>
                <fullName>Platinum Servicing</fullName>
            </value>
            <value>
                <fullName>Product Innovation</fullName>
            </value>
            <value>
                <fullName>Product Success</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Saver Success</fullName>
            </value>
            <value>
                <fullName>Servicing Management</fullName>
            </value>
            <value>
                <fullName>Simply API</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Transitions</fullName>
            </value>
            <value>
                <fullName>Ubiquity Site API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>